-- http://haskell.org/cabal/users-guide/

-- $ cabal sandbox init                  # initialise the sandbox
-- $ cabal install --only-dependencies   # install dependencies into the sandbox
-- $ cabal configure                     # ?
-- $ cabal build                         # build your package inside the sandbox

-- $ cabal run 1 2 3
-- # pass "1" "2" "3" to the file in `main-is` under `executable:`

-- $ cabal repl
-- # load modules into ghci in `exposed-modules` under `library`
-- # Prelude HNotes> parse "1 2 3"


-- The name of the package.
name:                hnotes

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            parses the syntax i take notes in. "h" for haskell.

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/sboosali/hnotes

-- The license under which the package is released.
license:             GPL-3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Sam Boosalis

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          samboosalis@gmail.com

-- A copyright notice.
-- copyright:           

category:            Parsing

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     HNotes

  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:
   parsec ==3.1.*,
   hedis ==0.6.*,
   base ==4.6.*
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010


executable hnotes
  main-is:             Main.hs

  build-depends:
   parsec ==3.1.*,
   hedis ==0.6.*,
   base ==4.6.*

  default-language:    Haskell2010
